manifests/apps/ucdialplans/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ucdialplans
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
