manifests/apps/ucdialplans/base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucdialplans
  namespace: ucdialplans
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ucdialplans
  template:
    metadata:
      labels:
        app: ucdialplans
        name: ucdialplans
        cnpg-client: "true"
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: high-priority
      containers:
      - name: ucdialplans
        image: registry.ucdialplans.com/ucdialplans-farewell:latest  #docker.io/kenlasko/ucdialplans:14.6.9
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          # runAsNonRoot: true
          # runAsUser: 1000
          # runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 5m
            memory: 300Mi
          limits:
            # cpu: 1200m
            memory: 600Mi
        volumeMounts:
        - name: ucdialplans-nginx
          mountPath: /etc/nginx/sites-enabled/default
          subPath: default
        - name: ucdialplans-webconfig
          mountPath: /var/www/web.config
          subPath: web.config
        - name: codesign-cert
          mountPath: /app/codesign
          readOnly: true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: http
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
      - name: dockerhub-creds
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      volumes:
      - configMap:
          items:
          - key: default
            path: default
          name: ucdialplans-nginx
        name: ucdialplans-nginx
      - configMap:
          items:
          - key: web.config
            path: web.config
          name: ucdialplans-webconfig
        name: ucdialplans-webconfig
      - name: codesign-cert
        secret:
          secretName: codesign-cert
