manifests/apps/ucdialplans/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ucdialplans-service
  name: ucdialplans-service
  namespace: ucdialplans
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
    name: web
  selector:
    app: ucdialplans
